--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>weather</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1> WEATHER APP </h1>
     <div id="countries-container"></div>
 
-    <script src = "script.js" ></script>
+    <script src = "js/script.js" ></script>
 </body>
 </html>
